--- a/signup/package.json
+++ b/signup/package.json
@@ -5,10 +5,10 @@
   "homepage": "https://janehyun03.github.io/signup",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to main' && git subtree push --prefix out origin main"
   },
   "dependencies": {
     "next": "14.1.0",
